<resources>
    <string name="app_name">Buscador_Cruceros</string>
    <string name="principal_Title">¡Encuentra tu Crucero!</string>
    <string name="year_construction">Año de Construcción</string>
    <string name="tonelaje">Tonelaje</string>
    <string name="company">Naviera</string>
    <string name="capacity_pasajeros">Capacidad de Pasajeros</string>
    <string name="capacity_tripulantes">Capacidad de Tripulantes</string>
    <string name="returnApp">Volver Atrás</string>
    <string name="addCruise">Añadir Crucero</string>
    <string name="editCruise">Editar Crucero</string>
    <string name="nameCruise">Nombre del Crucero</string>
    <string name="infoSelect">Seleccione una Naviera:</string>
    <string name="description">Escribe la descripción del crucero</string>
    <string name="mensaje_Naviera">Debes de Seleccionar una Naviera</string>
    <string name="dialog_title_year">Año de Construcción</string>
    <string name="confirmar_año">Confirmar Año</string>
    <string name="text_año">Año de Contrucción</string>
    <string name="preguntaDelete">¿Deseas Eliminar el Crucero?</string>
    <string name="preguntaEdit">¿Deseas Editar el Crucero?</string>
    <string name="si">Sí</string>
    <string name="no">No</string>
</resources>