<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="16dp"
    tools:context=".DetallesActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgCruceroDetalle"
            android:layout_width="match_parent"
            android:layout_height="225dp"
            android:scaleType="fitXY"/>

        <TextView
            android:id="@+id/tvTitleDetalle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginTop="12dp"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:text="Titulo" />

        <TextView
            android:id="@+id/tvCompanyDetalle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginTop="8dp"
            android:text="@string/company"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/tvConstructionDetalle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginTop="8dp"
            android:text="@string/year_construction"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/tvTonelajeDetalle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginTop="8dp"
            android:text="@string/tonelaje"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/tvCapacityDetalle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginTop="8dp"
            android:text="@string/capacity_pasajeros"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/tvCapacity2Detalle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginTop="8dp"
            android:text="@string/capacity_tripulantes"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/tvDescripcionDetalle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginTop="12dp"
            android:textSize="18dp"
            tools:text="Descripción" />

        <Button
            android:id="@+id/btnReturnDellate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/secondary_color"
            android:layout_gravity="right"
            android:text="@string/returnApp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>