<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddCrucero">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:gravity="center"
        android:text="@string/addCruise"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etNameCruise"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="12dp"
        android:hint="@string/nameCruise" />

    <Spinner
        android:id="@+id/spNavieras"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="12dp" />

    <EditText
        android:id="@+id/etTonelaje"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/tonelaje"
        android:inputType="number"
        android:layout_marginBottom="12dp" />

    <EditText
        android:id="@+id/etPasajeros"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/capacity_pasajeros"
        android:inputType="number"
        android:layout_marginBottom="12dp"/>

    <EditText
        android:id="@+id/etTripulantes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/capacity_tripulantes"
        android:inputType="number"
        android:layout_marginBottom="12dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Seleccione una Imagen del Crucero:"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="12dp"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/imgUpload"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:src="@drawable/upload_img"/>

    <EditText
        android:id="@+id/etDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:inputType="textMultiLine"
        android:hint="@string/description"
        android:layout_marginBottom="12dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp">
        <Button
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addCruise"
            app:layout_constraintTop_toBottomOf="@+id/etDescripcion"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="NotSibling" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.appcompat.widget.LinearLayoutCompat>