<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".AddCrucero">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginVertical="8dp"
            android:gravity="center"
            android:text="@string/editCruise"
            android:textSize="30sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputEditNameCruise"
            style="@style/MyTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="12dp"
            android:hint="@string/nameCruise">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEditNameCruise"
                style="@style/MyEditTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/CustomSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="12dp"
            android:hint="@string/infoSelect">

            <AutoCompleteTextView
                android:id="@+id/spEditNavieras"
                style="@style/MyEditTextInputLayout"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/principal_color"
                android:inputType="none"
                android:paddingHorizontal="5dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvYearEditConstruction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginHorizontal="16dp"
            android:text="Seleccione el año de Contrucción"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/imgEditCalendar"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/calendar"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputEditTonelaje"
            style="@style/MyTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="12dp"
            android:hint="@string/tonelaje"
            android:inputType="number">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEditTonelaje"
                style="@style/MyEditTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputEditPasajeros"
            style="@style/MyTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="12dp"
            android:hint="@string/capacity_pasajeros">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEditPasajeros"
                style="@style/MyEditTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputEditTripulantes"
            style="@style/MyTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="12dp"
            android:hint="@string/capacity_tripulantes">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEditTripulantes"
                style="@style/MyEditTextInputLayout"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="12dp"
            android:text="Seleccione una Imagen del Crucero:"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imgEditUpload"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:scaleType="fitXY"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:src="@drawable/upload_img" />

        <EditText
            android:id="@+id/etEditDescripcion"
            style="@style/MyEditTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="12dp"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:textColorHint="@color/white"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp">

            <Button
                android:id="@+id/btnEditAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:backgroundTint="@color/secondary_color"
                android:text="@string/editCruise"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etEditDescripcion"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp"
                tools:ignore="NotSibling" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>